<resources>
    <string name="app_name">FEFUMARKET</string>
    <string name="logo_description">Логотип</string>

    <!-- Экран входа -->
    <string name="login_title">Вход</string>
    <string name="email_hint">Почта</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button">Войти</string>
    <string name="register_link">Зарегистрироваться</string>

    <!-- Главное -->
    <string name="search_hint">Поиск объявлений</string>
    <string name="filter">Фильтр</string>

    <!-- Объявления -->
    <string name="ad_title">Объявление</string>
    <string name="product_photo">Фото товара</string>
    <string name="back">Назад</string>
    <string name="forward">Вперед</string>
    <string name="photo">Фото</string>
    <string name="sample_title">Название объявления</string>
    <string name="sample_price">₽45,000</string>
    <string name="sample_condition">Новое</string>
    <string name="sample_category">Техника</string>
    <string name="description">Описание</string>
    <string name="sample_description">Здесь будет описание товара. Информация о состоянии, комплектации и прочем.</string>
    <string name="write">Написать</string>
    <string name="to_favorites">В избранное</string>
    <string name="sample_dorm">Корпус №5</string>
    <string name="dorm_format">Корпус: %1$s</string>

    <!-- Избранного -->
    <string name="favorites">Избранное</string>
    <string name="remove_from_favorites">Удалить из избранного</string>
    <string name="sample_title_fav">Название товара</string>
    <string name="sample_price_fav">1000 ₽</string>
    <string name="removed_from_favorites">Удалено из избранного</string>
    <string name="add_to_favorites">Добавить в избранное</string>

    <!-- Сообщения и чат -->
    <string name="messages">Сообщения</string>
    <string name="chat_title">Чат</string>
    <string name="message_hint">Введите сообщение</string>
    <string name="send_button_desc">Отправить</string>
    <string name="chat_product_image">Фото товара</string>
    <string name="chat_product_title">Название товара</string>
    <string name="chat_last_message">Последнее сообщение...</string>

    <!-- Фильтры -->
    <string name="filters_title">Фильтры</string>
    <string name="back_button_desc">Назад</string>
    <string name="dorm_label">Корпус общежития</string>
    <string name="category_label">Категория</string>
    <string name="condition_label">Состояние</string>
    <string name="price_label">Цена</string>
    <string name="min_price_hint">Мин.</string>
    <string name="max_price_hint">Макс.</string>
    <string name="apply_button_text">Применить</string>
    <string name="remove_filter">Удалить фильтр</string>

    <!-- Профиль -->
    <string name="profile">Профиль</string>
    <string name="profile_image_desc">Фото профиля</string>
    <string name="profile_name">Имя</string>
    <string name="profile_password">Пароль</string>
    <string name="profile_save">Сохранить</string>
    <string name="profile_logout">Выйти</string>
    <string name="profile_delete">Удалить аккаунт</string>

    <!-- Мои объявления -->
    <string name="my_posts">Мои объявления</string>
    <string name="add_post">Разместить</string>
    <string name="description_hint">Описание</string>
    <string name="save">Сохранить</string>
    <string name="title_hint">Название товара</string>
    <string name="price_hint">Цена</string>
    <string name="dorm_hint">Корпус</string>
    <string name="edit_post">Редактировать объявление</string>
    <string name="ad_photo">Фото товара</string>
    <string name="change_photo">Изменить фото</string>
    <string name="sold">Продано</string>

    <!-- Создание объявления -->
    <string name="new_post_title">Новое объявление</string>
    <string name="cd_back">Назад</string>
    <string name="cd_add_photo">Добавить фото</string>
    <string name="label_title">Название товара</string>
    <string name="hint_title">Введите название</string>
    <string name="label_price">Цена (₽)</string>
    <string name="hint_price">Введите цену</string>
    <string name="label_dorm">Корпус</string>
    <string name="label_category">Категория</string>
    <string name="label_condition">Состояние</string>
    <string name="label_description">Описание</string>
    <string name="hint_description">Добавьте описание...</string>
    <string name="publish">Опубликовать</string>
    <string name="add_photo">Добавить фото</string>

</resources>